--- a/css/animation.css
+++ b/css/animation.css
@@ -1,91 +1,11 @@
-@keyframes header_logo {
+@keyframes cursor_blink {
   0% {
-    transform: rotateZ(5deg);
-  }
-  25% {
-    transform: rotateZ(-5deg);
+    opacity: 0;
   }
   50% {
-    transform: rotateZ(5deg);
-  }
-  75% {
-    transform: rotateZ(15deg);
+    opacity: 1;
   }
   100% {
-    transform: rotateZ(5deg);
-  }
-}
-@keyframes header_gnb_icon {
-  0% {
-    transform: translateY(0%);
-  }
-  50% {
-    transform: translateY(-10%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-@keyframes header_gnb_mobile {
-  0% {
-    transform: rotateZ(0);
-  }
-  25% {
-    transform: rotateZ(-5deg);
-  }
-  50% {
-    transform: rotateZ(0);
-  }
-  75% {
-    transform: rotateZ(5deg);
-  }
-  100% {
-    transform: rotateZ(0deg);
-  }
-}
-@keyframes header_gnb_cat {
-  0% {
-    transform: rotateZ(0);
-  }
-  24% {
-    transform: rotateZ(0);
-  }
-  25% {
-    transform: rotateZ(1deg);
-  }
-  49% {
-    transform: rotateZ(1deg);
-  }
-  50% {
-    transform: rotateZ(0deg);
-  }
-  74% {
-    transform: rotateZ(0deg);
-  }
-  75% {
-    transform: rotateZ(-1deg);
-  }
-  99% {
-    transform: rotateZ(-1deg);
-  }
-  100% {
-    transform: rotateZ(0);
-  }
-}
-@keyframes intro_kitty {
-  0% {
-    transform: rotateZ(5deg);
-  }
-  25% {
-    transform: rotateZ(-5deg);
-  }
-  50% {
-    transform: rotateZ(5deg);
-  }
-  75% {
-    transform: rotateZ(15deg);
-  }
-  100% {
-    transform: rotateZ(5deg);
+    opacity: 0;
   }
 }
