--- a/css/index.css
+++ b/css/index.css
@@ -15,95 +15,15 @@
 /*=================톤앤매너=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
-@keyframes header_logo {
+@keyframes cursor_blink {
   0% {
-    transform: rotateZ(5deg);
-  }
-  25% {
-    transform: rotateZ(-5deg);
+    opacity: 0;
   }
   50% {
-    transform: rotateZ(5deg);
-  }
-  75% {
-    transform: rotateZ(15deg);
+    opacity: 1;
   }
   100% {
-    transform: rotateZ(5deg);
-  }
-}
-@keyframes header_gnb_icon {
-  0% {
-    transform: translateY(0%);
-  }
-  50% {
-    transform: translateY(-10%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-@keyframes header_gnb_mobile {
-  0% {
-    transform: rotateZ(0);
-  }
-  25% {
-    transform: rotateZ(-5deg);
-  }
-  50% {
-    transform: rotateZ(0);
-  }
-  75% {
-    transform: rotateZ(5deg);
-  }
-  100% {
-    transform: rotateZ(0deg);
-  }
-}
-@keyframes header_gnb_cat {
-  0% {
-    transform: rotateZ(0);
-  }
-  24% {
-    transform: rotateZ(0);
-  }
-  25% {
-    transform: rotateZ(1deg);
-  }
-  49% {
-    transform: rotateZ(1deg);
-  }
-  50% {
-    transform: rotateZ(0deg);
-  }
-  74% {
-    transform: rotateZ(0deg);
-  }
-  75% {
-    transform: rotateZ(-1deg);
-  }
-  99% {
-    transform: rotateZ(-1deg);
-  }
-  100% {
-    transform: rotateZ(0);
-  }
-}
-@keyframes intro_kitty {
-  0% {
-    transform: rotateZ(5deg);
-  }
-  25% {
-    transform: rotateZ(-5deg);
-  }
-  50% {
-    transform: rotateZ(5deg);
-  }
-  75% {
-    transform: rotateZ(15deg);
-  }
-  100% {
-    transform: rotateZ(5deg);
+    opacity: 0;
   }
 }
 main .main_intro .nyan_1 .first_flex {
@@ -462,6 +382,7 @@ main .main_aboutme .nyan_zone .about_me_contents {
 @media screen and (min-width: 768px) {
   main .main_aboutme .nyan_zone .about_me_contents {
     flex-direction: row;
+    align-items: center;
   }
 }
 main .main_aboutme .nyan_zone .about_me_contents .about_me_illust {
@@ -605,21 +526,7 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
 }
 @media screen and (min-width: 768px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
-    margin-top: 80px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
-    margin-top: 100px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
-    margin-top: 120px;
-  }
-}
-@media screen and (min-width: 768px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
+    margin-top: 0;
     width: 70%;
   }
 }
@@ -779,22 +686,24 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_idc .i
   }
 }
 main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment {
-  margin-top: 15px;
+  margin-top: 25px;
   text-align: center;
+  position: relative;
+  margin-top: 40px;
 }
 @media screen and (min-width: 768px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment {
-    margin-top: 20px;
+    margin-top: 35px;
   }
 }
 @media screen and (min-width: 1200px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment {
-    margin-top: 25px;
+    margin-top: 40px;
   }
 }
 @media screen and (min-width: 1600px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment {
-    margin-top: 30px;
+    margin-top: 50px;
   }
 }
 main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment h4 {
@@ -808,17 +717,432 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_commen
 }
 @media screen and (min-width: 1200px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment h4 {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 @media screen and (min-width: 1600px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment h4 {
+    font-size: 21px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
+  display: inline-block;
+  border-radius: 1.5px;
+  height: 3px;
+  width: calc(6px + 2vw);
+  margin-left: 5px;
+  background-color: #e87d9e;
+  animation: cursor_blink 0.5s linear infinite;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
+    width: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
+    width: 24px;
+    height: 4px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
+    width: 28px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
+  margin-left: 3px;
+  background-color: white;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
+    width: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
+    width: 24px;
+    height: 4px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
+    width: 28px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+  margin-top: 7px;
+  margin-top: 15px;
+  font-size: calc(6px + 2vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    margin-top: 12px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    margin-top: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    font-size: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    font-size: 21px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
+    font-size: 24px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain {
+  margin-top: 25px;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain {
+    margin-top: 35px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain {
+    margin-top: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain {
+    margin-top: 50px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p {
+  font-size: calc(10px + 1vw);
+  line-height: 2em;
+  text-align: justify;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p {
+    font-size: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p {
     font-size: 28px;
   }
 }
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p span.descri_keyword {
+  color: #e87d9e;
+  display: block;
+  text-align: center;
+  font-size: 2em;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p span.descri_keyword {
+    display: inline;
+    text-align: justify;
+    font-size: 1.5em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p span.descri_keyword {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_title p span.descri_keyword {
+    font-size: 40px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents {
+  margin-top: 15px;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents {
+    margin-top: 25px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents {
+    margin-top: 30px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents p {
+  font-size: calc(10px + 1vw);
+  line-height: 2em;
+  text-align: justify;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents p {
+    font-size: calc(6px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents p {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_explain .explain_contents p {
+    font-size: 21px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    margin-top: 35px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    margin-top: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    margin-top: 50px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    width: 650px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge {
+    width: 850px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .current_num {
+  width: 10%;
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num {
+  font-size: calc(10px + 1vw);
+  text-align: center;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num {
+    font-size: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num {
+    font-size: 24px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge {
+  width: 60%;
+  margin: 0 10px;
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge {
+    width: 380px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge {
+    width: 580px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge .gauge_entire {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  border-radius: 1px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+@media screen and (min-width: 768px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge .gauge_entire {
+    height: 3px;
+    border-radius: 1.5px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge .gauge_entire {
+    height: 4px;
+    border-radius: 2px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge .gauge_entire {
+    height: 5px;
+    border-radius: 2.5px;
+  }
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .gauge .gauge_entire .gauge_current {
+  width: 40%;
+  height: inherit;
+  border-radius: inherit;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .rest_num {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 30%;
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .rest_num .num {
+  width: 45%;
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .rest_num .gauge_line {
+  display: block;
+  height: calc(10px + 1vw);
+  width: 2px;
+  background-color: #fff;
+}
 main .main_myspecs {
-  height: 1000px;
-  background-color: rgb(0, 156, 187);
+  margin-top: 150px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs {
+    margin-top: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs {
+    margin-top: 250px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs {
+    margin-top: 300px;
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 {
+    flex-direction: row;
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area {
+  position: relative;
+  width: calc(15px + 3vw);
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area {
+    margin: 0;
+    width: calc(30px + 2vw);
+    height: calc(20px + 2vw);
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 50px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 60px;
+    height: 48px;
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    margin: 0;
+    position: absolute;
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 20px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(1) {
+    bottom: 0;
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+    display: block;
+    left: 45%;
+    transform: translateX(-50%);
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+    display: block;
+    right: 0%;
+    top: 60%;
+    transform: translateY(-50%);
+  }
+}
+main .main_myspecs .main_h2 .nyan_zone_h2 .title_text_area h2 {
+  text-align: center;
+  font-size: calc(16px + 2vw);
+  margin-top: 7px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 40px;
+  }
 }
 main .main_myskills {
   height: 1000px;
