--- a/scss/index.scss
+++ b/scss/index.scss
@@ -295,6 +295,7 @@ main {
 
                 @include responsive(tablet-cat) {
                     flex-direction: row;
+                    align-items: center;
                 }
 
                 @include responsive(semi-cat) {
@@ -533,9 +534,10 @@ main {
                 }
 
                 .about_me_descri {
-                    @include nyan_mezo_margin;
+                    margin-top: $mezo_margin_p;
 
                     @include responsive(tablet-cat) {
+                        margin-top: 0;
                         width: 70%;
                     }
 
@@ -734,8 +736,10 @@ main {
 
                     .descri_comment {
                         
-                        @include nyan_tiny_margin;
+                        @include nyan_small_margin;
                         text-align: center;
+                        position: relative;
+                        margin-top: $regular_margin_p;
 
                         h4 {
                             font-size: calc(6px + 2vw);
@@ -746,15 +750,280 @@ main {
                             }
 
                             @include responsive(semi-cat) {
-                                font-size: 24px;
+                                font-size: 18px;
                             }
 
                             @include responsive(huge-cat) {
-                                font-size: 28px;
+                                font-size: 21px;
 
+                            }
+
+                        }
+
+                        .descri_cursor {
+                            display: inline-block;
+                            border-radius: 1.5px;
+                            height: 3px;
+                            width: calc(6px + 2vw);
+                            margin-left: 5px;
+                            background-color: $identity;
+                            animation: cursor_blink 0.5s linear infinite;
+
+                            @include responsive(tablet-cat) {
+                                width: calc(8px + 1vw);
+                            }
+
+                            @include responsive(semi-cat) {
+                                width: 24px;
+                                height: 4px;
+                            }
+
+                            @include responsive(huge-cat) {
+                                width: 28px
+                            }
+
+                            &.n2 {
+                                margin-left: 3px;
+                                background-color: white;
+
+                                @include responsive(tablet-cat) {
+                                    width: calc(8px + 1vw);
+                                }
+    
+                                @include responsive(semi-cat) {
+                                    width: 24px;
+                                    height: 4px;
+                                }
+    
+                                @include responsive(huge-cat) {
+                                    width: 28px
+    
+                                }
+                            }
+
+                        }
+
+                        p {
+                            @include nyan_petit_margin;
+                            margin-top: $tiny_margin_p;
+                            font-size: calc(6px + 2vw);
+
+                            @include responsive(tablet-cat) {
+                                font-size: calc(8px + 1vw);
+                            }
+
+                            @include responsive(semi-cat) {
+                                font-size: 21px;
+                                
+                            }
+
+                            @include responsive(huge-cat) {
+                                font-size: 24px;
+
+                            }
+
+                        }
+
+                    }
+
+                    .descri_explain {
+
+                        @include nyan_small_margin;
+
+                        .explain_title {
+
+                            p {
+                                font-size: calc(10px + 1vw);
+                                line-height: 2em;
+                                text-align: justify;
+
+                                @include responsive(tablet-cat) {
+                                    font-size: calc(8px + 1vw);
+                                }
+        
+                                @include responsive(semi-cat) {
+                                    font-size: 24px;
+                                }
+        
+                                @include responsive(huge-cat) {
+                                    font-size: 28px;
+                                }
+
+                                span.descri_keyword {
+                                    color: $identity;
+                                    display: block;
+                                    text-align: center;
+                                    font-size: 2em;
+
+                                    @include responsive(tablet-cat) {
+                                        display: inline;
+                                        text-align: justify;
+                                        font-size: 1.5em;
+                                    }
+            
+                                    @include responsive(semi-cat) {
+                                        font-size: 36px;
+                                    }
+            
+                                    @include responsive(huge-cat) {
+                                        font-size: 40px;
+                                    }
+                                }
+                            }
+
+                        }
+
+                        .explain_contents {
+                            @include nyan_tiny_margin;
+
+                            p {
+                                font-size: calc(10px + 1vw);
+                                line-height: 2em;
+                                text-align: justify;
+
+                                @include responsive(tablet-cat) {
+                                    font-size: calc(6px + 1vw);
+                                }
+    
+                                @include responsive(semi-cat) {
+                                    font-size: 18px;
+                                    
+                                }
+    
+                                @include responsive(huge-cat) {
+                                    font-size: 21px;
+    
+                                }
+                            }
+                        }
+                    }
+
+                    .descri_gauge {
+                        
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 100%;
+                        margin: 0 auto;
+                        @include nyan_small_margin;
+
+                        @include responsive(tablet-cat) {
+                            width: 90%;
+                        }
+
+                        @include responsive(semi-cat) {
+                            width: 650px;
+                        }
+
+                        @include responsive(huge-cat) {
+                            width: 850px;
+                        }
+                        
+                        .current_num {
+                            width: 10%;
+                        }
+
+                        .num {
+                            font-size: calc(10px + 1vw);
+                            text-align: center;
+                            cursor: pointer;
+
+                            @include responsive(tablet-cat) {
+                                font-size: calc(8px + 1vw);
+                            }
+
+                            @include responsive(semi-cat) {
+                                font-size: 18px;
+                            }
+
+                            @include responsive(huge-cat) {
+                                font-size: 24px;
                             }
                         }
 
+                        .gauge {
+                        
+                            width: 60%;
+                            margin: 0 10px;
+
+                            @include responsive(tablet-cat) {
+                                //
+                            }
+
+                            @include responsive(semi-cat) {
+                                width: 380px;
+                            }
+
+                            @include responsive(huge-cat) {
+                                width: 580px;
+                            }
+
+                            .gauge_entire {
+                                position: relative;
+                                width: 100%;
+                                height: 2px;
+                                border-radius: 1px;
+                                background-color: rgba($color: #ffffff, $alpha: 0.3);
+
+                                @include responsive(tablet-cat) {
+                                    height: 3px;
+                                    border-radius: 1.5px;
+                                }
+    
+                                @include responsive(semi-cat) {
+                                    height: 4px;
+                                    border-radius: 2px;
+                                }
+    
+                                @include responsive(huge-cat) {
+                                    height: 5px;
+                                    border-radius: 2.5px;
+                                }
+
+                                .gauge_current {
+                                    width: 40%;
+                                    height: inherit;
+                                    border-radius: inherit;
+                                    background-color: rgba($color: #ffffff, $alpha: 0.7);
+
+                                    @include responsive(tablet-cat) {
+                                        //
+                                    }
+        
+                                    @include responsive(semi-cat) {
+                                        //
+                                    }
+        
+                                    @include responsive(huge-cat) {
+                                        //
+                                    }
+                                }
+
+                            }
+                            
+
+
+
+                        }
+
+                        .rest_num {
+                            display: flex;
+                            justify-content: space-around;
+                            align-items: center;
+                            width: 30%;
+
+                            .num {
+                                width: 45%;
+                            }
+
+                            .gauge_line {
+                                display: block;
+                                height: calc(10px + 1vw);
+                                width: 2px;
+                                background-color: #fff;
+                                
+                            }
+                        }
                     }
 
                 }
@@ -767,8 +1036,8 @@ main {
     }
 
     .main_myspecs {
-        height: 1000px;
-        background-color: rgb(0, 156, 187);
+        @include nyan_large_margin;
+        @include nyan_common_h2;
 
     }
 
