--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -143,5 +143,19 @@
     }
 }
 
+@keyframes cat_jump {
+    0% {
+        transform: translateY(0%);
+    }
+
+    50% {
+        transform: translateY(-20%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
 // 
 
