--- a/css/animation.css
+++ b/css/animation.css
@@ -9,3 +9,14 @@
     opacity: 0;
   }
 }
+@keyframes cat_jump {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-20%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
