--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,17 @@
     opacity: 0;
   }
 }
+@keyframes cat_jump {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-20%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
 main .main_intro .nyan_1 .first_flex {
   position: relative;
 }
@@ -1027,6 +1038,7 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge 
 }
 main .main_myspecs {
   margin-top: 150px;
+  overflow: hidden;
 }
 @media screen and (min-width: 768px) {
   main .main_myspecs {
@@ -1144,9 +1156,524 @@ main .main_myspecs .main_h2 .nyan_zone_h2 .title_text_area h2 {
     font-size: 40px;
   }
 }
+main .main_myspecs .my_specs_back {
+  display: none;
+  position: relative;
+  z-index: -1;
+}
+main .main_myspecs .my_specs_back > div {
+  position: absolute;
+  width: calc(500px + 50vw);
+}
+main .main_myspecs .my_specs_back > div > img:last-child {
+  position: absolute;
+  top: 5%;
+  left: 0;
+}
+main .main_myspecs .my_specs_contents {
+  margin: 0 auto;
+  margin-top: 75px;
+  width: 90%;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents {
+    margin-top: 90px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents {
+    margin-top: 120px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents {
+    margin-top: 150px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp {
+  position: relative;
+  width: 55%;
+  max-width: 300px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp {
+    width: 26%;
+    max-width: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp {
+    margin: 0 auto;
+    width: 33.3333333333%;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(even) {
+  margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(even) {
+    margin-left: 0;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
+    margin-top: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
+    margin-top: 100px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
+    margin-top: 120px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(3n+2) {
+    top: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(3n+2) {
+    top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(1) {
+    top: -3em;
+    left: -5em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(1) {
+    top: -4.5em;
+    left: -7.5em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(2) {
+    top: 3em;
+    left: -5em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(2) {
+    top: 4.5em;
+    left: -7.5em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(3) {
+    top: 0;
+    left: -7em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(3) {
+    left: -10.5em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(4) {
+    top: -2em;
+    left: 4em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(4) {
+    top: -3em;
+    left: 6em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(5) {
+    top: 3em;
+    left: 6em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(5) {
+    top: 4.5em;
+    left: 9em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(6) {
+    top: -3em;
+    left: 3.5em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(6) {
+    top: -4.5em;
+    left: 5.25em;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp img {
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp img {
+    width: 250px;
+    display: block;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp img {
+    width: 300px;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt {
+    width: 250px;
+    margin: 0 auto;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4 {
+  font-size: calc(6px + 3vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4 {
+    font-size: calc(12px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4 {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4 {
+    font-size: 28px;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4.h4_even {
+  margin-top: 20px;
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h4.h4_even {
+    margin-top: 25px;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+  margin-top: 7px;
+  font-size: calc(7px + 2vw);
+  color: #e87d9e;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    margin-top: 12px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    margin-top: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    font-size: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt h5 {
+    font-size: 21px;
+  }
+}
+main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+  margin-top: 15px;
+  font-size: calc(7px + 2vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    margin-top: 25px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    font-size: calc(8px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    font-size: 21px;
+    margin-top: 15px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_contents .ms_contents_grp .ms_contents_txt p {
+    margin-top: 20px;
+    font-size: 24px;
+  }
+}
+main .main_myspecs .my_specs_urban {
+  position: relative;
+  width: 100%;
+  max-width: 3000px;
+  margin: 0 auto;
+  margin-top: 150px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_urban {
+    margin-top: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_urban {
+    margin-top: 200px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_urban {
+    margin-top: 300px;
+  }
+}
+main .main_myspecs .my_specs_urban > img {
+  width: 100%;
+}
+main .main_myspecs .my_specs_urban .urban_gradient {
+  position: absolute;
+  bottom: 5%;
+  width: 100%;
+  height: 200px;
+  display: block;
+  background: rgb(232, 125, 158);
+  background: linear-gradient(180deg, rgba(232, 125, 158, 0) 0%, rgb(232, 125, 158) 100%);
+  z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  main .main_myspecs .my_specs_urban .urban_gradient {
+    height: 300px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myspecs .my_specs_urban .urban_gradient {
+    height: 400px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myspecs .my_specs_urban .urban_gradient {
+    height: 500px;
+  }
+}
 main .main_myskills {
-  height: 1000px;
-  background-color: rgb(0, 142, 19);
+  margin-top: 120px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills {
+    margin-top: 150px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills {
+    margin-top: 180px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills {
+    margin-top: 200px;
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 {
+    flex-direction: row;
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area {
+  position: relative;
+  width: calc(15px + 3vw);
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area {
+    margin: 0;
+    width: calc(30px + 2vw);
+    height: calc(20px + 2vw);
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 50px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 60px;
+    height: 48px;
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    margin: 0;
+    position: absolute;
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 20px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(1) {
+    bottom: 0;
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+    display: block;
+    left: 45%;
+    transform: translateX(-50%);
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+    display: block;
+    right: 0%;
+    top: 60%;
+    transform: translateY(-50%);
+  }
+}
+main .main_myskills .main_h2 .nyan_zone_h2 .title_text_area h2 {
+  text-align: center;
+  font-size: calc(16px + 2vw);
+  margin-top: 7px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 40px;
+  }
+}
+main .main_myskills .my_skills_gnb {
+  margin-top: 25px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .my_skills_gnb {
+    margin-top: 35px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .my_skills_gnb {
+    margin-top: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .my_skills_gnb {
+    margin-top: 50px;
+  }
+}
+main .main_myskills .my_skills_gnb .mk_gnb_flex {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+main .main_myskills .my_skills_gnb .mk_gnb_flex li {
+  font-size: calc(12px + 2vw);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .my_skills_gnb .mk_gnb_flex li {
+    font-size: calc(16px + 1vw);
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .my_skills_gnb .mk_gnb_flex li {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .my_skills_gnb .mk_gnb_flex li {
+    font-size: 40px;
+  }
+}
+main .main_myskills .my_skills_gnb .mk_gnb_flex li .mk_gnb_kitty {
+  display: block;
+  margin-bottom: 5px;
+}
+main .main_myskills .my_skills_gnb .mk_gnb_flex li .mk_gnb_kitty img {
+  width: calc(20px + 5vw);
+  display: block;
+  animation: cat_jump ease-in 1s infinite;
 }
 main .main_projects {
   height: 1000px;
